# adsreport

./: .gitignore  CMakeLists.txt  README.md
fa/: CMakeLists.txt
fa/src/: CMakeLists.txt  fa.hpp  libmain.cpp
fa/test/: CMakeLists.txt
libadsreport/src/: CMakeLists.txt  atc.cpp  consumer.hpp  libadsreport.hpp  net.cc  net.hpp  producer.hpp  reporter.hpp  service.cpp  service.hpp
libadsreport/test/: CMakeLists.txt
reporter/src/: CMakeLists.txt  main.cc
reporter/test/: CMakeLists.txt
